Chore: Docker Compose

--- a/src/IdentityApi/Dockerfile
+++ b/src/IdentityApi/Dockerfile
@@ -15,7 +15,8 @@ RUN apt-get update \
 ARG AOT=false
 ARG Trim=true
 ARG ExtraOptimize=false
-ARG BUILD_CONFIGURATION=Release
+ARG BuildArchitecture=linux-arm64
+ARG BuildConfiguration=Release
 
 WORKDIR /src
 
@@ -24,7 +25,7 @@ COPY ["src/Domain/Domain.csproj", "src/Domain/"]
 COPY ["src/Application/Application.csproj", "src/Application/"]
 COPY ["src/Infrastructure/Infrastructure.csproj", "src/Infrastructure/"]
 
-RUN dotnet restore -r linux-arm64 "src/IdentityApi/IdentityApi.csproj" -p:Configuration=${BUILD_CONFIGURATION} -p:AOT=${AOT} -p:Trim=${Trim}
+RUN dotnet restore -r $BuildArchitecture "src/IdentityApi/IdentityApi.csproj" -p:Configuration=${BuildConfiguration} -p:AOT=${AOT} -p:Trim=${Trim}
 
 COPY . .
 
@@ -32,7 +33,7 @@ WORKDIR "/src/src/IdentityApi"
 
 FROM build AS publish
 
-RUN dotnet publish -r linux-arm64 "IdentityApi.csproj" --no-restore -c $BUILD_CONFIGURATION -p:AOT=${AOT} -p:Trim=${Trim} -p:ExtraOptimize=${ExtraOptimize} -o /app/publish
+RUN dotnet publish -r $BuildArchitecture "IdentityApi.csproj" --no-restore -c $BuildConfiguration -p:AOT=${AOT} -p:Trim=${Trim} -p:ExtraOptimize=${ExtraOptimize} -o /app/publish
 
 FROM mcr.microsoft.com/dotnet/runtime-deps:8.0 AS final
 
