--- a/src/IdentityApi/Dockerfile
+++ b/src/IdentityApi/Dockerfile
@@ -13,10 +13,10 @@ RUN apt-get update \
     clang zlib1g-dev
 
 ARG AOT=false
-ARG Trim=true
-ARG ExtraOptimize=false
-ARG BuildArchitecture=linux-arm64
-ARG BuildConfiguration=Release
+ARG TRIM=true
+ARG EXTRA_OPTIMIZE=false
+ARG BUILD_ARCHITECTURE=linux-arm64
+ARG BUILD_CONFIGURATION=Release
 
 WORKDIR /src
 
@@ -25,7 +25,7 @@ COPY ["src/Domain/Domain.csproj", "src/Domain/"]
 COPY ["src/Application/Application.csproj", "src/Application/"]
 COPY ["src/Infrastructure/Infrastructure.csproj", "src/Infrastructure/"]
 
-RUN dotnet restore -r $BuildArchitecture "src/IdentityApi/IdentityApi.csproj" -p:Configuration=${BuildConfiguration} -p:AOT=${AOT} -p:Trim=${Trim}
+RUN dotnet restore -r $BUILD_ARCHITECTURE "src/IdentityApi/IdentityApi.csproj" -p:Configuration=${BUILD_CONFIGURATION} -p:AOT=${AOT} -p:Trim=${TRIM}
 
 COPY . .
 
@@ -33,7 +33,7 @@ WORKDIR "/src/src/IdentityApi"
 
 FROM build AS publish
 
-RUN dotnet publish -r $BuildArchitecture "IdentityApi.csproj" --no-restore -c $BuildConfiguration -p:AOT=${AOT} -p:Trim=${Trim} -p:ExtraOptimize=${ExtraOptimize} -o /app/publish
+RUN dotnet publish -r $BUILD_ARCHITECTURE "IdentityApi.csproj" --no-restore -c $BUILD_CONFIGURATION -p:AOT=${AOT} -p:Trim=${TRIM} -p:ExtraOptimize=${EXTRA_OPTIMIZE} -o /app/publish
 
 FROM mcr.microsoft.com/dotnet/runtime-deps:8.0 AS final
 
