--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -15,13 +15,32 @@ jobs:
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.0.x
+          global-json-file: global.json
 
       - name: Restore Dependencies
         run: dotnet restore
 
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0
+        with:
+          versionSpec: '5.x'
+  
+      - name: Determine Version
+        uses: gittools/actions/gitversion/execute@v0
+        with:
+          useConfigFile: true
+          updateAssemblyInfo: true
+
       - name: Build Application
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build --configuration Release --no-restore /p:Version=${{ env.GitVersion_SemVer }}
+
+      - name: Unit Tests
+        working-directory: "./test/Application.Test"
+        run: dotnet test   
+  
+      - name: Architecture Tests
+        working-directory: "./test/Architecture.Test"
+        run: dotnet test
 
   container-test:
     needs: setup-build-test
