--- a/src/WebApi/Dockerfile
+++ b/src/WebApi/Dockerfile
@@ -12,13 +12,13 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends \
     clang zlib1g-dev
 
-ARG AOT=false
-ARG TRIM=true
-ARG EXTRA_OPTIMIZE=false
-ARG BUILD_ARCHITECTURE=linux-arm64
-ARG BUILD_CONFIGURATION=Release
+ARG AOT
+ARG TRIM
+ARG EXTRA_OPTIMIZE
+ARG BUILD_ARCHITECTURE
+ARG BUILD_CONFIGURATION
 
-# ARG ConnectionStrings__DefaultConnection
+# ARG DB_CONNECTION_STRING
 
 WORKDIR /src
 
@@ -33,7 +33,7 @@ COPY . .
 
 WORKDIR "/src/src/WebApi"
 
-# RUN dotnet user-secrets set "ConnectionStrings__DefaultConnection" "${ConnectionStrings__DefaultConnection}"
+# RUN dotnet user-secrets set "ConnectionStrings__DefaultConnection" "${DB_CONNECTION_STRING}"
 
 FROM build AS publish
 
