--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       args:
         AOT: false
         TRIM: true
-        EXTRA_OPTIMIZE: false
+        EXTRA_OPTIMIZE: true
         BUILD_ARCHITECTURE: linux-arm64
         BUILD_CONFIGURATION: Release
     hostname: webapi1
@@ -34,7 +34,7 @@ services:
       args:
         AOT: false
         TRIM: true
-        EXTRA_OPTIMIZE: false
+        EXTRA_OPTIMIZE: true
         BUILD_ARCHITECTURE: linux-arm64
         BUILD_CONFIGURATION: Release      
     hostname: identityapi
