--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -8,12 +8,13 @@ scrape_configs:
   - job_name: "prometheus"
     scrape_interval: 5s
     static_configs:
-      - targets: ["localhost:9090"]
+      - targets: ["prometheus-service:9090"]
   - job_name: "webapi-2"
     scrape_interval: 5s
     metrics_path: "/metrics"
     static_configs:
       - targets: [ "docker.for.mac.localhost:9999" ]
+      # - targets: [ "localhost:9999" ]
   - job_name: "postgres-exporter"
     static_configs:
-      - targets: [ "postgres-exporter:9187" ]
+      - targets: [ "postgres-exporter-service:9187" ]
