Feat: Fake Data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - network-cpnucleo
 
   db:
-    image: postgres
+    image: postgres:16.7
     hostname: db
     container_name: db-cpnucleo
     restart: always
