--- a/test/Integration.Tests/Integration.Tests.csproj
+++ b/test/Integration.Tests/Integration.Tests.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="xunit" Version="2.6.6" />
+    <PackageReference Include="Dangl.Xunit.Extensions.Ordering" Version="2.1.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
