--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   webapi1: &webapi1
     build:
       context: .
-      dockerfile: src/WebAPI/Dockerfile
+      dockerfile: src/WebApi/Dockerfile
       args:
         AOT: false
         TRIM: true
