--- a/src/WebApi/WebApi.csproj
+++ b/src/WebApi/WebApi.csproj
@@ -66,7 +66,7 @@
 
 	<ItemGroup>
 		<InternalsVisibleTo Include="Integration.Tests" />
-		<!-- <InternalsVisibleTo Include="Stress.Tests" /> -->
+		<InternalsVisibleTo Include="Stress.Tests" />
 	</ItemGroup>
 
 </Project>
