--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -1,9 +1,21 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information"
+    },
+    "OpenTelemetry": {
+      "IncludeFormattedMessage": true,
+      "IncludeScopes": true,
+      "ParseStateValues": true
     }
   },
-  "AllowedHosts": "*"
+  "ServiceName": "WebApi-Cpnucleo",
+  "AllowedHosts": "*",
+  "HistogramAggregation": "explicit",
+  "AspNetCoreInstrumentation": {
+    "RecordException": "true"
+  },
+  "Otlp": {
+    "Endpoint": "http://localhost:4317"
+  }
 }
