--- a/nginx.conf
+++ b/nginx.conf
@@ -18,8 +18,8 @@ http {
 
     upstream api {
         least_conn; # Sends new requests to the server with the least number of active connections
-        server webapi1:8080; # webapi1
-        server webapi2:8080; # webapi2
+        server webapi1-cpnucleo:8080;
+        server webapi2-cpnucleo:8080;
     }
 
     gzip on; # Enables gzip compression to reduce the size of the HTTP response
