--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 name: "cpnucleo"
 
 services:
-  webapi1: &webapi1
+  webapi1-cpnucleo: &webapi1
     build:
       context: ./src/
       dockerfile: ./WebApi/Dockerfile
@@ -9,25 +9,24 @@ services:
         AOT: false
         TRIM: true
         EXTRA_OPTIMIZE: false
-        BUILD_ARCHITECTURE: linux-arm64
         BUILD_CONFIGURATION: Release
-    hostname: webapi1
-    container_name: webapi-1
+    container_name: webapi-1-cpnucleo
     depends_on:
       - db
-    restart: always      
+    restart: always
+    ports:
+      - "5100:8080"    
     environment:
       ASPNETCORE_ENVIRONMENT: Development
       ConnectionStrings__DefaultConnection: Host=db;Username=postgres;Password=postgres;Database=cpnucleo;Minimum Pool Size=10;Maximum Pool Size=10;Multiplexing=true;
-    networks:
-      - network-cpnucleo
 
-  webapi2:
+  webapi2-cpnucleo:
     <<: *webapi1
-    hostname: webapi2
-    container_name: webapi-2
+    container_name: webapi-2-cpnucleo
+    ports:
+      - "5111:8080"  
 
-  identityapi:
+  identityapi-cpnucleo:
     build:
       context: ./src/
       dockerfile: ./IdentityApi/Dockerfile
@@ -35,10 +34,8 @@ services:
         AOT: false
         TRIM: true
         EXTRA_OPTIMIZE: false
-        BUILD_ARCHITECTURE: linux-arm64
         BUILD_CONFIGURATION: Release
-    hostname: identityapi
-    container_name: identityapi
+    container_name: identityapi-cpnucleo
     depends_on:
       - db
     restart: always      
@@ -46,15 +43,10 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
       ConnectionStrings__DefaultConnection: Host=db;Username=postgres;Password=postgres;Database=cpnucleo;Minimum Pool Size=10;Maximum Pool Size=10;Multiplexing=true;
     ports:
-      - "9998:5050"
-    expose: 
-      - 9998      
-    networks:
-      - network-cpnucleo
+      - "5200:5050"
 
   db:
     image: postgres:16.7
-    hostname: db
     container_name: db-cpnucleo
     restart: always
     depends_on:
@@ -69,49 +61,38 @@ services:
     ports:
       - "5432:5432"
     command: postgres -c checkpoint_timeout=600 -c max_wal_size=4096 -c synchronous_commit=0 -c fsync=0 -c full_page_writes=0
-    networks:
-      - network-cpnucleo
 
   nginx:
     image: nginx
-    hostname: nginx
     container_name: nginx-cpnucleo
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on: 
-      - webapi1
-      - webapi2
+      - webapi1-cpnucleo
+      - webapi2-cpnucleo
+      - identityapi-cpnucleo
     ports:
       - "9999:9999"
-    networks:
-      - network-cpnucleo
       
   postgres-exporter:
     image: prometheuscommunity/postgres-exporter
-    hostname: pgsql-exporter
     container_name: postgres-exporter-service
     ports:
       - 9187:9187
     environment:
       DATA_SOURCE_NAME: "postgresql://postgres:postgres@db:5432/cpnucleo?sslmode=disable"
-    networks:
-      - network-cpnucleo
 
   prometheus:
     image: prom/prometheus
-    hostname: prometheus
     container_name: prometheus-service
     ports:
       - "9090:9090"
     volumes:
       - prometheus-data:/prometheus
       - "./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml"
-    networks:
-      - network-cpnucleo
 
   grafana:
       image: grafana/grafana-oss
-      hostname: grafana
       container_name: grafana-service        
       ports:
         - "3000:3000"
@@ -120,12 +101,6 @@ services:
         - "./grafana/dashboards/:/var/lib/grafana/dashboards/"
       depends_on:
         - prometheus
-      networks:
-      - network-cpnucleo
-
-networks:
-  network-cpnucleo:
-    driver: bridge
 
 volumes:
   db-data:
