--- a/src/IdentityApi/Dockerfile
+++ b/src/IdentityApi/Dockerfile
@@ -14,7 +14,6 @@ RUN apt-get update \
 ARG AOT
 ARG TRIM
 ARG EXTRA_OPTIMIZE
-ARG BUILD_ARCHITECTURE
 ARG BUILD_CONFIGURATION
 
 WORKDIR /src
@@ -24,21 +23,21 @@ COPY ["Domain/Domain.csproj", "Domain/"]
 COPY ["Application/Application.csproj", "Application/"]
 COPY ["Infrastructure/Infrastructure.csproj", "Infrastructure/"]
 
+RUN dotnet restore "./IdentityApi/IdentityApi.csproj" -p:Configuration=${BUILD_CONFIGURATION} -p:AOT=${AOT} -p:Trim=${TRIM}
+
 COPY . .
 
 WORKDIR "/src/IdentityApi"
 
-RUN dotnet build -r $BUILD_ARCHITECTURE "IdentityApi.csproj" -c $BUILD_CONFIGURATION -p:AOT=${AOT} -p:Trim=${TRIM} -p:ExtraOptimize=${EXTRA_OPTIMIZE} -o /app/publish
+RUN dotnet build "IdentityApi.csproj" -c $BUILD_CONFIGURATION -p:AOT=${AOT} -p:Trim=${TRIM} -p:ExtraOptimize=${EXTRA_OPTIMIZE} -o /app/publish
 
 FROM build AS publish
 
-RUN dotnet publish -r $BUILD_ARCHITECTURE "IdentityApi.csproj" --no-restore -c $BUILD_CONFIGURATION -p:AOT=${AOT} -p:Trim=${TRIM} -p:ExtraOptimize=${EXTRA_OPTIMIZE} -o /app/publish
+RUN dotnet publish "IdentityApi.csproj" --no-restore -c $BUILD_CONFIGURATION -p:AOT=${AOT} -p:Trim=${TRIM} -p:ExtraOptimize=${EXTRA_OPTIMIZE} -o /app/publish
 
 FROM base AS final
 
 WORKDIR /app
-
-ENV ASPNETCORE_URLS=http://+:5050
 EXPOSE 5050
 
 COPY --from=publish /app/publish .
