--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -9,7 +9,7 @@ scrape_configs:
     scrape_interval: 10s
     static_configs:
       - targets: ["prometheus-service:9090"]
-  - job_name: "webapi-2"
+  - job_name: "webapi2-cpnucleo"
     scrape_interval: 10s
     metrics_path: "/metrics"
     static_configs:
