--- a/.github/workflows/main-release-identityapi.yml
+++ b/.github/workflows/main-release-identityapi.yml
@@ -14,6 +14,10 @@ env:
 jobs:
   setup-build-test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: "./src/IdentityApi"
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
