--- a/src/GrpcServer/GrpcServer.csproj
+++ b/src/GrpcServer/GrpcServer.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<RuntimeIdentifiers>linux-x64;linux-arm64</RuntimeIdentifiers>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(AOT)' == 'true'">
