--- a/src/GrpcServer/Dockerfile
+++ b/src/GrpcServer/Dockerfile
@@ -16,6 +16,8 @@ ARG TRIM
 ARG EXTRA_OPTIMIZE
 ARG BUILD_CONFIGURATION
 
+ARG DB_CONNECTION_STRING
+
 WORKDIR /src
 
 COPY ["GrpcServer/GrpcServer.csproj", "GrpcServer/"]
@@ -28,6 +30,8 @@ RUN dotnet restore "./GrpcServer/GrpcServer.csproj" -p:Configuration=${BUILD_CON
 COPY . .
 
 WORKDIR "/src/GrpcServer"
+
+RUN dotnet user-secrets set "ConnectionStrings__DefaultConnection" "${DB_CONNECTION_STRING}"
 
 RUN dotnet build "GrpcServer.csproj" -c $BUILD_CONFIGURATION -p:AOT=${AOT} -p:Trim=${TRIM} -p:ExtraOptimize=${EXTRA_OPTIMIZE} -o /app/publish
 
